[package]
name = "advent-of-code-2020"
version = "0.2.0"
authors = ["Joshua Skrzypek <jskrzypek@gmail.com>"]
edition = "2018"

[lib]
name = "advent_of_code_2020"
path = "aoc-2020/lib.rs"

[[example]]
name = "aoc-2020"
path = "aoc-2020/main.rs"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.9.0"
validator = { version = "0.12", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lazy_static = "1.4.0"
regex = "1.4.2"
fnv = "1.0.6"
chrono = "0.4.6"
petgraph = "0.4.13"